# nanobanana

./: CLAUDE.md  RELEASES.md  pyproject.toml
.claude/skills/: release.md
docs/: RESEARCH_SUMMARY_openai_edit_revised_prompt.md  api_pricing_verification_2026.md  cost_calculation_research.md  google_api_metadata_research.md  openai_revised_prompt_field.md
specs/: features.md  google-metadata-capture.md  metadata-release.md  openai-metadata-capture.md
src/imggen/: cli.py  generator.py  pricing.py  version.py
src/imggen/providers/: google_provider.py  openai_provider.py
tests/: README.md  conftest.py  test_generator.py  test_google_provider.py  test_openai_provider.py  test_providers.py
